[tool.poetry]
name = "chaski"
version = "0.1.0"
description = ""
authors = ["Bruno Ciconelle <bciconel@redhat.com>"]
readme = "README.md"
packages = [{ include = "app.py" }]

[tool.poetry.scripts]
chaski = 'app:app'

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"
PyYAML = "^6.0"
requests = "^2.28.1"
typer = { extras = ["all"], version = "^0.6.1" }

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ipykernel = "^6.15.1"
isort = "^5.10.1"
flakeheaven = "^3.2.0"
flake8-isort = "^6.0.0"
flake8-black = "^0.3.6"

[tool.poetry.group.commit-lint.dependencies]
commitizen = "^2.40.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
version_files = [
    "pyproject.toml:^version"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flakeheaven]
base = "https://raw.githubusercontent.com/quipucords/linting/main/base-flakeheaven.toml"
