[tool.poetry]
name = "chaski"
version = "0.3.0"
description = ""
authors = ["Bruno Ciconelle <bciconel@redhat.com>"]
readme = "README.md"
packages = [{ include = "app.py" }]

[tool.poetry.scripts]
chaski = 'app:app'

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"
PyYAML = "^6.0"
requests = "^2.28.1"
typer = { extras = ["all"], version = "^0.6.1" }

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ipykernel = "^6.15.1"
ruff = "^0.0.270"

[tool.poetry.group.commit-lint.dependencies]
commitizen = "^2.40.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
tag_format = "$version"
version_files = [
    "pyproject.toml:^version"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "C90", # mccabe complexity
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "Q",   # flake8-quotes
    "W",   # pycodestyle
    "PL",  # Pylint
    "BLE", # flake8-blind-except
    "PTH", # flake8-use-pathlib
]
ignore = [
    "D107",
    "D203", 
    "D403",
]
target-version = "py311"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "pep257"
